<resources>
    <string name="app_name">App_TableLayout</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>

    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>

    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="zero">0</string>
    <string name="add">+</string>
    <string name="subtract">-</string>

    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="result">=</string>

    <string name="restore_values">Restore values</string>
    <string name="text_view">0</string>
</resources>